k8s/client-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels: 
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: vincentdevweb/client:latest
        resources:
          limits:
            memory: "258Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: client
