k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  labels: 
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: vincentdevweb/comments:latest
        resources:
          limits:
            memory: "258Mi"
            cpu: "1000m"
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4001
      name: comments
