k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
  labels: 
    app: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: vincentdevweb/query:latest
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
